<resources>
    <string name="app_name">PetFeeder</string>


    <!-- Create Acount page -->
    <string name="create_account_header">Create Account</string>
    <string name="create_account_username_hint">Username</string>
    <string name="create_account_email_hint">Email</string>
    <string name="create_account_password_hint">Password</string>
    <string name="create_account_confirm_password_hint">Confirm Password</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="create_account_already_have_account">Already have an account?</string>
    <string name="create_account_login">Login</string>

    <!-- Device Setups page -->
    <string name="device_welcome_header">Welcome!</string>
    <string name="device_welcome_text">To get your feeder working we need to connect it to the Wi-Fi network, please turn on the feeder to proceed.\n\nIf the lights are on continue to the next page.</string>
    <string name="device_welcome_btn">The lights are on</string>

    <string name="turn_ble_header">Turn on bluetooth</string>
    <string name="turn_ble_text">Turn on the bluetooth to activate the feeder to the phone during the installation process.</string>
    <string name="turn_ble_btn">Turn on bluetooth</string>

    <string name="scan_bt_header">Looking for equipment</string>
    <string name="scan_bt_text">Don’t turn off the application</string>
    <string name="don_t_turn_off_the_equipmen">Don’t turn off the equipment</string>
    <string name="connecting">Connecting</string>
    <string name="create_profile">Create Profile</string>
    <string name="all_set">All set!</string>
    <string name="everything_is_ready_now">Everything is ready! Now you can schedule your pet meals!</string>
    <string name="equipment_not_detected">Equipment not detected</string>
    <string name="try_the_following">
    Try the following:\n\n
    \u2022 Verify if the equipment is turned on, you can turn it on by connecting to the outlet;\n\n
    \u2022 Verify if the light on the ESP32 is on;\n\n
    \u2022 Turn on the bluetooth of your phone;\n\n
    \u2022 Put your phone closer to the ESP;\n\n
    \u2022 If the problem persists turn it off and restart the application.
</string>

    <string name="try_again">Try Again</string>
    <string name="connect">Connect</string>
    <string name="select_another">SELECT ANOTHER</string>
    <string name="wifi">Wifi</string>
    <string name="fill_the_password_of_your_network">Fill the password of your network</string>
    <string name="are_you_sure_you_want_to_delete_this_device">Are you sure you want to delete this device?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pet_name">Pet Name</string>
    <string name="device_manager">Device Manager</string>
    <string name="skip_device_steps">Skip Device Steps</string>
    <string name="food_information">Food Information</string>
    <string name="food_storage">Food Storage</string>
    <string name="_90_food_supply">90% Food supply</string>
    <string name="humidity">Humidity</string>
    <string name="_11">11%</string>
    <string name="temperature">Temperature</string>
    <string name="_25_c">25º C</string>
    <string name="meals_left">Meals Left</string>
    <string name="_20">20</string>
    <string name="days_left">Days Left</string>
    <string name="_5">5</string>
    <string name="are_you_sure_you_want_to_delete_this_meal">Are you sure you want to delete this meal?</string>
    <string name="hour">HOUR</string>
    <string name="repeat_days">Repeat Days</string>
    <string name="next_meal_at">Next meal at</string>
    <string name="_10_30">10:30</string>
    <string name="_90_food_suply">90% Food Suply</string>
    <string name="portion">Portion</string>
    <string name="_85g">85g</string>
    <string name="thanks_for_the_treat">Thanks for the treat!</string>
    <string name="friday_07_april_2023">Friday, 07 April, 2023</string>
    <string name="_1_5kg">1.5Kg</string>
    <string name="vaccine_1">Vaccine 1</string>
    <string name="_01_01_2023">01/01/2023</string>
    <string name="_60_days_left">60 days left</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="login">Login</string>
    <string name="first_time">First time?</string>
    <string name="create_account">Create account</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="device_management">Device Management</string>
    <string name="settings">Settings</string>
    <string name="about_the_application">About the Application</string>
    <string name="logout">Logout</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="microchip">Microchip</string>
    <string name="save">Save</string>
    <string name="vaccines">Vaccines</string>
    <string name="history">History</string>
    <string name="food_history">Food History</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="the_meals_history_list_is_empty">The Meals History list is empty.</string>
    <string name="new_meal">New Meal</string>
    <string name="repeat">Repeat</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="notification">Notification</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="animated_notifications">Animated notifications</string>
    <string name="volume">Volume</string>
    <string name="date_and_time">Date and time</string>
    <string name="language">Language</string>
    <string name="new_vaccine">New Vaccine</string>
    <string name="next_dose">Next Dose</string>
    <string name="choose_your_wi_fi_network">Choose your Wi-Fi Network</string>
    <string name="continue_">Continue</string>
    <string name="no_upcoming_meals">No upcoming meals</string>
    <string name="date_not_available">Date not available</string>
    <string name="food_supply">% Food Supply</string>
    <string name="all_days">All Days</string>
    <string name="only_once">Only once</string>
    <string name="monday_to_friday">Monday to Friday</string>
</resources>