<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="15dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/rounded_corner">

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_restore_from_trash_24"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_vaccine"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="10dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editNextDose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/next_dose"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/eraseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNextDose" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_gravity="end"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNextDose" />




</androidx.constraintlayout.widget.ConstraintLayout>