<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_meal"
            android:textSize="@dimen/medium_24"
            android:textColor="@color/green_400"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
    </androidx.appcompat.widget.Toolbar>

    <NumberPicker
        android:id="@+id/numberPickerHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/NumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerMinute"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- NumberPicker for Minutes -->
    <NumberPicker
        android:id="@+id/numberPickerMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:theme="@style/NumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/numberPickerHour"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:background="@drawable/custom_username_edit_text"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberPickerMinute">

        <!-- Repeat Section -->
        <TextView
            android:id="@+id/repeatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/repeat"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/green_400"
            android:textSize="@dimen/small_16" />

        <!-- Day of the Week Buttons -->
        <LinearLayout
            android:id="@+id/dayOfWeekButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="7">

            <!-- Example for Monday button -->
            <Button
                android:id="@+id/buttonMonday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_100"
                android:padding="0dp"
                android:text="@string/mon"
                android:textColor="@color/white"
                android:textSize="@dimen/small_16" />

            <Button
                android:id="@+id/buttonTuesday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_100"
                android:padding="0dp"
                android:text="@string/tue"
                android:textColor="@color/white"
                android:textSize="@dimen/small_16" />

            <Button
                android:id="@+id/buttonWednesday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_100"
                android:padding="0dp"
                android:text="@string/wed"
                android:textColor="@color/white"
                android:textSize="@dimen/small_16" />

            <Button
                android:id="@+id/buttonThursday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_100"
                android:padding="0dp"
                android:text="@string/thu"
                android:textColor="@color/white"
                android:textSize="@dimen/small_16" />

            <Button
                android:id="@+id/buttonFriday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_100"
                android:padding="0dp"
                android:text="@string/fri"
                android:textColor="@color/white"
                android:textSize="@dimen/small_16" />

            <Button
                android:id="@+id/buttonSaturday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_100"
                android:padding="0dp"
                android:text="@string/sat"
                android:textColor="@color/white"
                android:textSize="@dimen/small_16" />

            <Button
                android:id="@+id/buttonSunday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_100"
                android:padding="0dp"
                android:text="@string/sun"
                android:textColor="@color/white"
                android:textSize="@dimen/small_16" />
        </LinearLayout>

        <!-- Portion Section -->
        <TextView
            android:id="@+id/portionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"

            android:text="@string/portion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/green_400"
            android:textSize="@dimen/small_16" />

        <SeekBar
            android:id="@+id/portionSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="10"
            android:progress="85"
            android:progressDrawable="@drawable/custom_seekbar"
            android:splitTrack="false"
            android:thumb="@drawable/custom_seekbar_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/portionTreatText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <!-- Notification Section -->
            <TextView
                android:id="@+id/notificationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/notification"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchAnimatedNotifications"
                style="@style/CustomSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="10dp"
                android:elevation="4dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
    </LinearLayout>

    <!-- Cancel Button -->

    <!-- Save Button -->
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/green_200"
        android:text="@string/cancel"
        android:textSize="@dimen/small_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/orange_300"
        android:text="@string/save"
        android:textSize="@dimen/small_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintWidth_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>