<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrowleft2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/food_information"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/foodStorageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/green_400"
        android:text="@string/food_storage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/foodStorageProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:progress="25"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodStorageLabel" />

    <TextView
        android:id="@+id/foodSupplyPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_90_food_supply"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/foodStorageProgress"
        app:layout_constraintTop_toBottomOf="@+id/foodStorageProgress" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodSupplyPercentage">

        <!-- Humidity -->
        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner_meal_schedule">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/humidity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:layout_marginBottom="12dp"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11"
                android:layout_marginBottom="18dp"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>
        </FrameLayout>

        <!-- Temperature -->
        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner_meal_schedule">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/temperature" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textViewTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_c"
                    android:layout_marginBottom="18dp"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>
        </FrameLayout>

        <!-- Meals Left -->
        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_meal_schedule">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/mealsleft" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meals_left"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textViewMealsLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20"
                    android:layout_marginBottom="18dp"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>
        </FrameLayout>

        <!-- Days Left -->
        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_corner_meal_schedule">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/daysleft" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days_left"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textViewDaysLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:layout_marginBottom="18dp"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>
        </FrameLayout>
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>